force-app/main/default/objects/Project_Meeting__c/Project_Meeting__c.object-meta.xml
<CustomObject>
    <label>Project Meeting</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Project Meeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>