force-app/main/default/objects/Project_Meeting__c/fields/Date_of_Next_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Meeting__c</fullName>
    <label>Date of Next Meeting</label>
    <type>Date</type>
</CustomField>