force-app/main/default/objects/Project_Meeting__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <label>Demo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>