force-app/main/default/objects/Project_Meeting__c/fields/Holidays__c.field-meta.xml
<CustomField>
    <fullName>Holidays__c</fullName>
    <label>Holidays</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>