force-app/main/default/objects/Project_Meeting__c/fields/Project_Meeting_Info__c.field-meta.xml
<CustomField>
    <fullName>Project_Meeting_Info__c</fullName>
    <description>Provides the name of the meeting and the date upon which it took place</description>
    <formula>TEXT(DAY(Weekly_Status_Report_Date__c)) &amp; &apos;/&apos; &amp; TEXT(MONTH(Weekly_Status_Report_Date__c)) &amp; &apos;/&apos; &amp; TEXT(YEAR(Weekly_Status_Report_Date__c)) &amp; &apos; - &apos; &amp; Project_Report_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Meeting Info</label>
    <type>Text</type>
</CustomField>