force-app/main/default/objects/Project_Meeting__c/fields/Project_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Report_Date__c</fullName>
    <formula>Project__r.Project_Report_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Report Date</label>
    <type>Date</type>
</CustomField>