force-app/main/default/objects/Project_Meeting__c/fields/Project_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Report_Name__c</fullName>
    <defaultValue>&quot;Weekly Status Report&quot;</defaultValue>
    <label>Project Report Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>