force-app/main/default/objects/Project_Meeting__c/fields/Project_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Report__c</fullName>
    <formula>Project__r.Project_Status_Report__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status Report</label>
    <type>Text</type>
</CustomField>