force-app/main/default/objects/Project_Meeting__c/fields/Weekly_Status_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Status_Report_Date__c</fullName>
    <label>Weekly Status Report Date</label>
    <type>Date</type>
</CustomField>